# Fundamentos_Analitica

./: .gitignore  Dockerfile  Lectura_1_Stats_Descriptiva.ipynb  Lectura_2_Histogramas.ipynb  Lectura_3_Med_Ten_Cent.ipynb  README.md  compose.yml  pyproject.toml
data/: mi_descarga.xlsx
intro_Python/: Lectura_0.ipynb  Lectura_1.ipynb  Lectura_2.ipynb  Lectura_3.ipynb  Lectura_4_stud.ipynb  Lectura_5_stud.ipynb  Lectura_6.ipynb  Lectura_7.ipynb  Lectura_8.ipynb  Lectura_Jupyter_Notebook.ipynb
